Fixed overflowing words and empty repo message on about page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -276,6 +276,7 @@ a.user-card {
   padding-bottom: 20px;
   margin-bottom: 30px;
   position: relative;
+  word-break: break-word;
 }
 
 .repo-description {
